--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ iframe {
 }
 
 .control-btn {
-  background-color: #FBC6DA;
+  background-color: #FFCCDC;
   border: none;
   color: #FFFFFF;
   border-radius: 4px;
@@ -61,6 +61,45 @@ iframe {
 
 .progress-bar-fill {
   height: 100%;
-  background-color: #FBC6DA;
+  background-color: #FFCCDC;
+  border-radius: 2px;
+}
+
+
+/******* VOLUME SLIDER *******/
+
+/* Volume slider */
+.volume-slider {
+  position: absolute;
+  width: 100px;
+  height: 20px;
+  transform: rotate(-90deg);
+  top: 370px;
+  /* Adjust the value to move it higher */
+}
+
+/* Volume slider track */
+.slider {
+  width: 100%;
+  height: 4px;
+  -webkit-appearance: none;
+  background-color: #FFCCDC;
+  border-radius: 4px;
+  outline: none;
+}
+
+/* Volume slider thumb */
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 20px;
+  height: 8px;
+  border-radius: 4px;
+  background-color: #FFFFFF;
+  cursor: pointer;
+}
+
+/* Volume slider fill */
+.slider::-webkit-slider-runnable-track {
+  background-color: #FFCCDC;
   border-radius: 2px;
 }
