--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ iframe {
   height: 20px;
   transform: rotate(-90deg);
   top: 370px;
+  display: none;
   /* Adjust the value to move it higher */
 }
 
