--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 body {
   font-family: 'Roboto', sans-serif;
   display: flex;
-  /* justify-content: center; */
-  /* align-items: center; */
+  justify-content: center;
+  align-items: center;
   margin: 0;
 }
 
